# lisp-machine-lm1

./: .gitignore  BUILD-PLAN.md  README.md  ideas.md
design/: bios.md  desktop.md  emulator.md  os.md  surface.md
docs/: test_gap_ideas.md
emu/: Makefile  pyproject.toml  setup.py
emu/lm1/: __init__.py  __main__.py  _accel_ext.c  asm.py  bios.py  cli.py  compiler.py  core.py  crystal.py  decode.py  desktop.py  desktop_test_driver.py  execute.py  font.py  icons.py  memory.py  toolkit.py  traps.py  vdi.py  vfs.py  word.py
emu/lm1/_accel/: __init__.py
emu/lm1/fonts/: __init__.py  noto_mono_14.lmfont  noto_mono_14_bold.lmfont  noto_mono_16.lmfont
emu/lm1/testing/: __init__.py  harness.py  runner.py
emu/tests/: __init__.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
fpga/: README.md
fpga/rtl/: lm1_fpga_top.sv
fpga/syn/: filelist.f
rtl/cluster/: lm1_cluster.sv  lm1_crossbar.sv
rtl/core/: lm1_alu.sv  lm1_branch.sv  lm1_control.sv  lm1_cpu.sv  lm1_decoder.sv  lm1_ic_table.sv  lm1_icache.sv  lm1_lsu.sv  lm1_msg_queue.sv  lm1_perf_counters.sv  lm1_pkg.sv  lm1_regfile.sv  lm1_tmpl_table.sv
rtl/doc/: 00-index.md  (+7 more)
spec/: 00-overview.md  01-object-model.md  02-isa.md  03-core.md  04-soc.md  05-memory-gc.md  06-runtime.md  07-encoding.md
tb/: gen_gap_tests.py  gen_gc_tests.py  gen_rom_test.py  gen_tests.py  lm1_tb.sv  run_all_tests.sh  run_test.sh
tools/: compile_font.py
(+93 files in other folders)
